--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -1,4 +1,3 @@
-
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,12 +9,20 @@
     tools:context="com.venkata.sai.pavan.phonecop.MainScreen">
 
     <!-- TODO: Update blank fragment layout -->
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        style="@style/MyActionBar" />
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="?attr/colorPrimary"-->
+            <!--style="@style/AppTheme"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+
+    <!--</android.support.design.widget.AppBarLayout>-->
 
     <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
@@ -24,15 +31,15 @@
             android:padding="@dimen/activity_horizontal_margin"
             android:id="@+id/main_screen_view_pager">
 
-            <android.support.v4.view.PagerTabStrip
+            <android.support.design.widget.TabLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/main_screen_view_pager_header"
-                android:padding="20dp"
+                android:paddingTop="8dp"
                 android:clickable="true"
                 android:textAlignment="center">
 
-            </android.support.v4.view.PagerTabStrip>
+            </android.support.design.widget.TabLayout>
 
         </android.support.v4.view.ViewPager>
 
