--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -27,15 +27,13 @@
     <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/main_screen_view_pager_margin_top"
-            android:padding="@dimen/activity_horizontal_margin"
+            android:padding="10dp"
             android:id="@+id/main_screen_view_pager">
 
             <android.support.design.widget.TabLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/main_screen_view_pager_header"
-                android:paddingTop="8dp"
                 android:clickable="true"
                 android:textAlignment="center">
 
