--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
 
     <!--Main Screen dimensions-->
     <dimen name="main_screen_app_bar_margin_bottom">32dp</dimen>
-    <dimen name="main_screen_view_pager_margin_top">32dp</dimen>
+    <dimen name="main_screen_view_pager_margin_top">14dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
